add db connection and test search_history table
