# backend/src/openapi/swagger.json
@@ -1106,6 +1106,30 @@
 					}
 				},
 				"type": "object"
+			},
+			"SearchHistoryRowModel": {
+				"properties": {
+					"search_term": {
+						"type": "string"
+					},
+					"user_id": {
+						"type": "string"
+					},
+					"date_saved": {
+						"type": "string"
+					},
+					"id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"search_term",
+					"user_id",
+					"date_saved",
+					"id"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {
@@ -1222,6 +1246,32 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/searchhistory": {
+			"get": {
+				"operationId": "GetSearchHistory",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/SearchHistoryRowModel"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"fake_user_id": []
+					}
+				],
+				"parameters": []
 			}
 		}
 	},
